--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- FIRST SECTION VIDEO  -->
   <section class="section hero-section">
+    <!-- DO NOT TOUCH -->
     <video autoplay muted loop class="bg-video">
       <source src="bgvideos/58290-488224724.mp4" type="video/mp4">
     </video>
